--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -4,7 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
-.backend/database_schema/workSpace.mwb
+./backend/database_schema/workSpace.mwb.bak
 # testing
 /coverage
 
