--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # dependencies
 ./frontend/node_modules
 ./backend/node_modules
+./backend/.env
 /.pnp
 .pnp.js
 ./backend/database_schema/workSpace.mwb.bak
