--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 DATABASE = Aqra
 DATABASE_HOST = localhost
-DATABASE_USER = fatah
-DATABASE_PASSWORD = 0000
+DATABASE_USER = root
+DATABASE_PASSWORD = 123
 JWT_SECRET = mysupersecretpassword
 JWT_EXPIRES_IN = 90d
 JWT_COOKIE_EXPIRES = 90
